--- a/css/eat-ux.css
+++ b/css/eat-ux.css
@@ -5,6 +5,42 @@ html {
   height:100%;
 }
 
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url('../fonts/sourcesanspro-regular-webfont.eot#') format('eot'),
+      url('../fonts/sourcesanspro-regular-webfont.woff') format('woff'),
+      url('../fonts/sourcesanspro-regular-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url('../fonts/sourcesanspro-bold-webfont.eot#') format('eot'),
+      url('../fonts/sourcesanspro-bold-webfont.woff') format('woff'),
+      url('../fonts/sourcesanspro-bold-webfont.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url('../fonts/sourcesanspro-italic-webfont.eot#') format('eot'),
+      url('../fonts/sourcesanspro-italic-webfont.woff') format('woff'),
+      url('../fonts/sourcesanspro-italic-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url('../fonts/sourcesanspro-light-webfont.eot#') format('eot'),
+      url('../fonts/sourcesanspro-light-webfont.woff') format('woff'),
+      url('../fonts/sourcesanspro-light-webfont.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
 body {
   background: #f9f9f9;
   color: #212121;
